[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/levels/story_2_exterior/good_modules.gd" type="Script" id=1]
[ext_resource path="res://game/objects/repair_module/repair_module.tscn" type="PackedScene" id=2]

[node name="GoodModules" type="Spatial"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -9.06341, -74.4583, -0.0244986 )
script = ExtResource( 1 )

[node name="Module1" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.318838, 0 )

[node name="Module2" parent="." instance=ExtResource( 2 )]

[node name="Module3" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.324876, 0 )

[connection signal="insert_changed" from="Module1" to="." method="_on_Module1_insert_changed"]
[connection signal="insert_changed" from="Module2" to="." method="_on_Module2_insert_changed"]
[connection signal="insert_changed" from="Module3" to="." method="_on_Module3_insert_changed"]
